# fdpAPIconnector.py

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/fdpAPIconnector/: __init__.py  default_templates.py  fdpclient.py
tests/: general_test_scretch_file.py
