[metadata]
name = fdpAPIconnector
version = 0.0.1
author = Emilian Jungwirth
author_email = emilian.jungwirth@medunigraz.at
description = python package to connect to a FDP API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bibbox/fdpAPIconnector.py
project_urls =
    Bug Tracker = https://github.com/bibbox/fdpAPIconnector.py/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src